--- a/css/core.css
+++ b/css/core.css
@@ -74,9 +74,8 @@ h3 { margin-bottom: 15px; }
 p { line-height: 1.422169; }
 
 /* GENERAL RULES */
-.container {
-	margin-top: 50px;
-	/* background-color: green; */
+[class^="col-"] {
+	margin-bottom: 50px;
 }
 .a-container {
   position: relative;
@@ -596,11 +595,6 @@ a.slider-btn .alfa-plus {
 }
 
 /* TITLES RULES */
-@media (max-width: 990px) {
-	.top-features {
-		margin-bottom: 20px;
-	}
-}
 .title-icon-front {
 	display: inline-block;
 	float: left;
@@ -661,6 +655,33 @@ a.slider-btn .alfa-plus {
 .collapsed .icon-5:before {
 	content: "\e269";
 }
+.icon-6 {
+	margin-right: 15px;
+	float: left;
+	width: 32px;
+	height: 32px;
+	text-align: center;
+	color: #fff;
+	background-color: #40b598;
+}
+.list-a li:hover .icon-6 {
+	background-color: #34373a;
+}
+.icon-6:before {
+	content: "\26";
+}
+
+/* LISTS RULES  */
+.list-a {
+	padding: 0;
+	list-style: none;
+}
+.list-a li {
+	padding: 1px 0 2px;
+	margin-bottom: 8px;
+	background-color: #ebebeb;
+	line-height: 32px;
+}
 
 /* COLORS RULES */
 .main-header {
@@ -669,17 +690,27 @@ a.slider-btn .alfa-plus {
 }
 
 /* FIX RULES */
+.mt-1 {
+	margin-top: 50px;
+}
+.mb-0 {
+	margin-bottom: 0;
+}
+.mb-1 {
+	margin-bottom: 10px;
+}
+.bb-0 {
+	border-bottom: none;
+}
 
 /* ANIMATION TIMER RULES */
 a,
 img,
 .title-icon-front,
-.icon-5 {
+.icon-5,
+.icon-6 {
 	-webkit-transition: 0.35s  ease-in-out;
 	-moz-transition: 0.35s ease-in-out;
 	-o-transition: 0.35s ease-in-out;
 	transition: 0.35s ease-in-out;
-}
-.mb-1 {
-	margin-bottom: 20px;
 }
