--- a/css/core.css
+++ b/css/core.css
@@ -4,7 +4,7 @@
              Website:	Alpha Médico Hospitalar
          Description:	HTML5/OOCSS3
  Layout online since:	2013
-         Last Change:	22.10.2013
+         Last Change:	6.11.2013
 ================================================
 */
 /* Basics */
@@ -44,6 +44,17 @@ a:hover {
   color: #fff;
   text-shadow: none;
 }
+a:hover,
+a:focus,
+a:active,
+button::-moz-focus-inner,
+input[type="reset"]::-moz-focus-inner,
+input[type="button"]::-moz-focus-inner,
+input[type="submit"]::-moz-focus-inner,
+select::-moz-focus-inner,
+input[type="file"] > input[type="button"]::-moz-focus-inner {
+    outline: 0;
+}
 *,
 *:after,
 *::before {
@@ -52,11 +63,11 @@ a:hover {
     box-sizing: border-box;
 }
 
-/* TYPOGRAPHY */
+/* TYPOGRAPHY RULES */
 h1 { font-size: 27.599px; }
 h2 { font-size: 23px; }
 h3 { font-size: 19.99px; }
-h4 { font-size: 16.9px; }
+h4 { font-size: 17.5px; }
 h5 { font-size: 15.9px; }
 h6 { font-size: 14.3px; }
 h1,
@@ -66,6 +77,7 @@ h4,
 h5,
 h6 {
 	margin-top: 3px;
+  color: #2e3134;
 	font-weight: normal;
   line-height: 1.2em;
 }
@@ -480,8 +492,8 @@ html[xmlns] .slides {display: block;}
 .flex-control-thumbs .flex-active {opacity: 1; cursor: default;}
 
 @media screen and (max-width: 860px) {
-  .flex-direction-nav .flex-prev { left: 10px; opacity: 1;}
-  .flex-direction-nav .flex-next { right: 10px; opacity: 1;}
+  .main-slider-container .flex-direction-nav .flex-prev { left: 10px; opacity: 1;}
+  .main-slider-container .flex-direction-nav .flex-next { right: 10px; opacity: 1;}
 }
 @media (max-width: 992px) {
   .main-slider-container { margin-top: 20px; }
@@ -501,7 +513,6 @@ html[xmlns] .slides {display: block;}
 }
 .slider-legend h3 {
 	margin: 25px 0 10px;
-	color: #2e3134;
 }
 .slider-legend p {
 	margin-bottom: 25px;
@@ -525,25 +536,27 @@ a.slider-btn .alfa-plus {
 }
 
 /* SLIDER2 RULES  */
-.slider2  { position: relative;background:transparent;}
+.slider2  { position: relative; background:transparent; }
 .slider2 .flex-direction-nav {*height: 0;}
 .slider2 .flex-direction-nav a {
 	position: absolute;
 	top: -10px;
-	z-index: 90;
-	display: inline-block;
+	z-index: 10;
+	display: block;
 	width: 34px;
 	height: 34px;
 	background-color: #34373a;
 	color: #fff;
 	text-align: center;
-	font-weight: 100;
 	line-height: 34px;
 	opacity: .8;
+	cursor: pointer;
 }
-.slider2 .flex-direction-nav .flex-next { right: 0px;background-position: 100% 0; }
-.slider2 .flex-direction-nav .flex-prev {right: 35px;}
-.slider2:hover a {opacity: 1;}
+.slider2 .flex-direction-nav a:hover {
+	background-color: #40b598;
+}
+.slider2 .flex-direction-nav .flex-next {	right: 0px; }
+.slider2 .flex-direction-nav .flex-prev {	right: 35px; }
 .slider2 .flex-direction-nav .flex-prev:before {
 	content: "\e3b9";
 	font-size: 14px;
@@ -552,10 +565,13 @@ a.slider-btn .alfa-plus {
 	content: "\e3b8";
 	font-size: 14px;
 }
-.slider2 .flex-prev {opacity: 1;}
+.slider2:hover .flex-next {opacity: 1;}
+.slider2:hover .flex-prev {opacity: 1;}
 .slider2 .flexslider:hover .flex-next:hover, .flexslider:hover .flex-prev:hover {opacity: .8;}
 .slider2 .flex-direction-nav .flex-disabled {opacity: .6!important; filter:alpha(opacity=60); cursor: default;}
 .slider2 .flex-control-nav {display:none;}
+
+
 
 /* CONTENTS RULES */
 .content-box {
@@ -572,7 +588,6 @@ a.slider-btn .alfa-plus {
 	display: block;
 	width: 100%;
 	height: 100%;
-
 	opacity: 0;
 	filter: alpha(opacity=0);
 	-webkit-transition: all 450ms ease-out 0s;
@@ -624,6 +639,12 @@ a.slider-btn .alfa-plus {
 }
 .border-content:hover {
 	border-color: #9CA0A2;
+}
+/* DATE RULES */
+.date {
+	display: block;
+	margin-bottom: 10px;
+	color: #B7BABB;
 }
 
 /* TITLES RULES */
@@ -701,6 +722,9 @@ a.slider-btn .alfa-plus {
 }
 .icon-6:before {
 	content: "\26";
+}
+.icon-7:before {
+	content: "\e0df";
 }
 
 /* LISTS RULES  */
