--- a/css/core.css
+++ b/css/core.css
@@ -210,7 +210,7 @@ input.main-input {
 	color: #fff;
 	padding: 12px 0 12px 20px;
 }
-.main-nav span {
+.main-nav a span {
 	position: absolute;
 	top: 0;
 	right: 82px;
@@ -223,7 +223,8 @@ input.main-input {
 	opacity: 0;
 }
 .main-nav a:hover span,
-.main-nav a:focus span {
+.main-nav a:focus span,
+a.current span {
 	right: 0;
 	opacity: 1;
 }
@@ -499,6 +500,9 @@ a.slider-btn .alfa-plus {
 .content-box {
 	clear: both;
 }
+.figure-box {
+	margin-bottom: 30px;
+}
 .item-thumbs {
 	position: relative;
 	overflow: hidden;
@@ -608,11 +612,26 @@ a.slider-btn .alfa-plus {
 .title-front {
 	color: #34373a;
 }
-.heading {
-  color: #949696;
-	text-transform: uppercase;
+.heading-1,
+.heading-2 {
 	font-size: 19px;
   font-family: "SourceSansPro-Se";
+}
+.heading-1 {
+	text-transform: uppercase;
+}
+.heading-2 {
+	font-family: "SourceSansPro-Re";
+	margin: 0;
+	color: #2e3134;
+}
+.sub-heading {
+	margin-bottom: 20px;
+	font-family: "SourceSansPro-Li";
+}
+.heading-1,
+.sub-heading {
+  color: #949696;
 }
 
 /* ICONS RULES */
@@ -717,7 +736,7 @@ a.slider-btn .alfa-plus {
 	padding: 40px 30px 0;
 	background-color: #34373a;
 }
-.ct-footer .heading {
+.ct-footer .heading-1 {
 	margin-bottom: 10px;
 	color: #fff;
 }
@@ -772,6 +791,9 @@ a.slider-btn .alfa-plus {
 .mt-1 {
 	margin-top: 50px;
 }
+.mt-2 {
+	margin-top: 15px;
+}
 .mb-0 {
 	margin-bottom: 0 !important;
 }
@@ -781,6 +803,9 @@ a.slider-btn .alfa-plus {
 .mb-2 {
 	display: block;
 	margin-bottom: 15px;
+}
+.mb-3 {
+	margin-bottom: 25px;
 }
 .bb-0 {
 	border-bottom: none;
