--- a/css/core.css
+++ b/css/core.css
@@ -530,8 +530,13 @@ a.slider-btn .alfa-plus {
 	border-bottom: 1px solid #cfcfcf;
 }
 .bar-division {
-	text-align: center;
 	border-top: 1px solid #cfcfcf;
+	text-align: center;
+}
+.bar-division.comments {
+	margin: 30px 0 0;
+	padding-top: 30px;
+	text-align: left;
 }
 .fig-hover {
 	display: block;
@@ -915,6 +920,41 @@ h1.title-front-news {
 	line-height: 25px;
 }
 
+/* FORM RULES */
+.form-comment {
+	margin-top: 50px;
+	padding-top: 30px;
+	border-top: 1px solid #cfcfcf;
+}
+.form-comment [class*="col-"] {
+	margin-bottom: 20px;
+}
+.form-comment input, .form-comment textarea {
+  margin-top:10px;
+  padding:8px 12px !important;
+  width:100%;
+  border:0px;
+  border: 1px solid #cfcfcf;
+  border-radius:0px;
+  background-color: #FFFFFF;
+  color:#fff;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+
+}
+.form-comment textarea {
+	height:150px;
+	resize:none;
+}
+.form-comment .btn {
+	padding: 9px 15px;
+	color: #fff;
+	background-color: #34373a;
+}
+.form-comment .btn:hover {
+	background-color: #40b598;
+}
+
 /* COLORS RULES */
 .main-header {
 	background-color: #40b598;
@@ -1023,7 +1063,7 @@ img,
 .icon-5,
 .icon-6,
 .slider2 .flex-direction-nav a,
-.btn-footer,
+.btn,
 .main-nav span {
 	-webkit-transition: 0.35s  ease-in-out;
 	-moz-transition: 0.35s ease-in-out;
