--- a/css/core.css
+++ b/css/core.css
@@ -29,11 +29,13 @@ textarea {
   font-size: 14px;
   font-family: "SourceSansPro-Re", sans-serif;
 }
-a {
+a,
+.panel-body a {
 	color: #000;
   text-decoration: none;
 }
-a:hover {
+a:hover,
+.panel-body a:hover {
   color: #40b598;
   text-decoration: none;
 }
