--- a/css/core.css
+++ b/css/core.css
@@ -4,7 +4,7 @@
              Website:	Alpha Médico Hospitalar
          Description:	HTML5/OOCSS3
  Layout online since:	2013
-         Last Change:	21.11.2013
+         Last Change:	8.4.2014
 ================================================
 */
 /* Basics */
@@ -35,7 +35,8 @@ a,
   text-decoration: none;
 }
 a:hover,
-.panel-body a:hover {
+.panel-body a:hover,
+.heading-1 a:hover {
   color: #40b598;
   text-decoration: none;
 }
@@ -546,6 +547,9 @@ a.slider-btn .alfa-plus {
 	margin-bottom: 20px;
 	background-color: #fff;
 }
+.mb-4 .fig-hover {
+	background: transparent;
+}
 .fig-hover:hover img {
 	opacity: .85;
 	filter:alpha(opacity=85);
@@ -770,6 +774,7 @@ h1.title-front-news {
 	font-family: "SourceSansPro-Li";
 }
 .heading-1,
+.heading-1 a,
 .sub-heading {
   color: #949696;
 }
@@ -1071,6 +1076,9 @@ h1.title-front-news {
 }
 .mb-3 {
 	margin-bottom: 25px;
+}
+.mb-4 {
+	margin-bottom: 50px;
 }
 .bb-0 {
 	border-bottom: none;
