--- a/css/core.css
+++ b/css/core.css
@@ -4,7 +4,7 @@
              Website:	Alpha Médico Hospitalar
          Description:	HTML5/OOCSS3
  Layout online since:	2013
-         Last Change:	8.4.2014
+         Last Change:	9.4.2014
 ================================================
 */
 /* Basics */
@@ -69,6 +69,14 @@ input[type="file"] > input[type="button"]::-moz-focus-inner {
 		box-sizing: border-box;
 		-ms-box-sizing: border-box;
 }
+.breadcrumb {
+	padding: 15px 20px;
+	background-color: #ebebeb;
+	border-radius: 0;
+}
+.breadcrumb a:hover {
+	color: #ff4b64;
+}
 
 /* TYPOGRAPHY RULES */
 h1 { font-size: 27.599px; }
@@ -90,6 +98,7 @@ h6 {
 }
 h2 { margin-bottom: 2px; }
 h3 { margin-bottom: 15px; }
+h4 { margin-bottom: 5px; }
 p { line-height: 1.422169; }
 
 /* GENERAL RULES */
@@ -721,7 +730,7 @@ a.slider-btn .alfa-plus {
 /* DATE RULES */
 .date {
 	display: block;
-	margin-bottom: 10px;
+	margin-bottom: 13px;
 	color: #B7BABB;
 }
 
